wacc/test/golden/semanticErr.IO.readTypeErr
# attempt to read into a boolean variable

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  bool b = true ;
  read b ; 
  println b 
end


Semantic error in test/wacc_examples/invalid/semanticErr/IO/readTypeErr.wacc (line 13, column 8):
type error: only ints and chars may be read, but a bool was found
>   bool b = true ;
>   read b ; 
>        ^
>   println b 

